# DataVisualization-FinalProject

./: .env.example  .gitignore  CLAUDE.md  INIT.md  Makefile  PLAN.md  README.md  REQUIREMENTS.md  VERIFICATION.md  lint-output.txt
.claude/: settings.json  settings.local.json
backend/: pyproject.toml  requirements.txt  verify_backend.ps1
backend/app/: config.py  main.py
backend/app/api/: ai.py  ai_stream.py  data.py  execute.py  gallery.py  insights.py  logs.py
backend/app/db/: schema.sql
backend/app/models/: request.py  response.py
backend/app/services/: data_store.py  data_store_youtube_old.py  executor.py  gallery.py  insight_service.py  logger.py
backend/app/services/llm/: base.py  gemini.py  prompts.py
backend/data/: sample.csv
docs/: api-spec.md  architecture.md  design-system.md
frontend/: VERIFICATION_CHECKLIST.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/app/: CategoryFilterContext.tsx  MultiDimensionalFilterContext.tsx  globals.css  layout.tsx  page.tsx
frontend/app/ai/: page.tsx
frontend/app/anomaly/: page.tsx
frontend/app/channels/: page.tsx
frontend/app/economy/: page.tsx
frontend/app/gallery/: page.tsx
frontend/app/hourly/: page.tsx
frontend/app/interaction/: page.tsx
frontend/app/seasonal/: page.tsx
frontend/app/short-form/: page.tsx
frontend/app/trend/: page.tsx
frontend/app/weather/: page.tsx
frontend/app/weekend/: page.tsx
frontend/components/ai/: ChatInput.tsx  CodeBlock.tsx  GenerationProgress.tsx  ResultPanel.tsx  StatusBadge.tsx  (+1 more)
frontend/lib/: api.ts  constants.ts  design-tokens.ts
(+35 files in other folders)
