[project]
name = "vn-dataviz-ai-backend"
version = "0.1.0"
description = "FastAPI backend for VN Data Viz + AI Module"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "python-dotenv",
    "pandas",
    "matplotlib",
    "seaborn",
    "google-generativeai",
    "aiosqlite",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
